force-app/main/default/objects/Order/fields/Won_Value__c.field-meta.xml
<CustomField>
    <fullName>Won_Value__c</fullName>
    <label>Won Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>